tests/ui/utils/dump_hir.stderr
note: Item(
          Item {
              ident: Arc#0,
              owner_id: DefId(dump_hir::{use#1}),
              kind: Use(
                  Path {
                      span: tests/ui/utils/dump_hir.rs:10:5: 10:19 (#N),
                      res: [
                          Def(
                              Struct,
                              DefId(alloc::sync::Arc),
                          ),
                      ],
                      segments: [
                          PathSegment {
                              ident: std#0,
                              hir_id: HirId(DefId(dump_hir::{use#1}).1),
                              res: Def(
                                  Mod,
                                  DefId(std),
                              ),
                              args: None,
                              infer_args: false,
                          },
                          PathSegment {
                              ident: sync#0,
                              hir_id: HirId(DefId(dump_hir::{use#1}).2),
                              res: Def(
                                  Mod,
                                  DefId(std::sync),
                              ),
                              args: None,
                              infer_args: false,
                          },
                          PathSegment {
                              ident: Arc#0,
                              hir_id: HirId(DefId(dump_hir::{use#1}).3),
                              res: Err,
                              args: None,
                              infer_args: false,
                          },
                      ],
                  },
                  Single,
              ),
              span: tests/ui/utils/dump_hir.rs:10:1: 10:20 (#N),
              vis_span: tests/ui/utils/dump_hir.rs:10:1: 10:1 (#N),
          },
      )
  --> tests/ui/utils/dump_hir.rs:10:5
   |
LL | #[rpl::dump_hir]
   | ---------------- HIR dumped because of this attribute
...
LL | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^

note: Item(
          Item {
              ident: m#0,
              owner_id: DefId(dump_hir::m),
              kind: Mod(
                  Mod {
                      spans: ModSpans {
                          inner_span: tests/ui/utils/dump_hir.rs:18:5: 19:2 (#N),
                          inject_use_span: tests/ui/utils/dump_hir.rs:18:5: 18:5 (#N),
                      },
                      item_ids: [
                          ItemId {
                              owner_id: DefId(dump_hir::m::foo),
                          },
                      ],
                  },
              ),
              span: tests/ui/utils/dump_hir.rs:16:1: 19:2 (#N),
              vis_span: tests/ui/utils/dump_hir.rs:16:1: 16:1 (#N),
          },
      )
  --> tests/ui/utils/dump_hir.rs:16:1
   |
LL | #[rpl::dump_hir]
   | ---------------- HIR dumped because of this attribute
...
LL | mod m {
   | ^^^^^

note: Item(
          Item {
              ident: Foo#0,
              owner_id: DefId(dump_hir::Foo),
              kind: Trait(
                  No,
                  Safe,
                  Generics {
                      params: [],
                      predicates: [],
                      has_where_clause_predicates: false,
                      where_clause_span: tests/ui/utils/dump_hir.rs:25:10: 25:10 (#N),
                      span: tests/ui/utils/dump_hir.rs:25:10: 25:10 (#N),
                  },
                  [],
                  [
                      TraitItemRef {
                          id: TraitItemId {
                              owner_id: DefId(dump_hir::Foo::N),
                          },
                          ident: N#0,
                          kind: Const,
                          span: tests/ui/utils/dump_hir.rs:31:5: 31:20 (#N),
                      },
                  ],
              ),
              span: tests/ui/utils/dump_hir.rs:25:1: 32:2 (#N),
              vis_span: tests/ui/utils/dump_hir.rs:25:1: 25:1 (#N),
          },
      )
  --> tests/ui/utils/dump_hir.rs:25:1
   |
LL | #[rpl::dump_hir]
   | ---------------- HIR dumped because of this attribute
...
LL | trait Foo {
   | ^^^^^^^^^

note: TraitItem(
          TraitItem {
              ident: N#0,
              owner_id: DefId(dump_hir::Foo::N),
              generics: Generics {
                  params: [],
                  predicates: [],
                  has_where_clause_predicates: false,
                  where_clause_span: tests/ui/utils/dump_hir.rs:31:19: 31:19 (#N),
                  span: tests/ui/utils/dump_hir.rs:31:12: 31:12 (#N),
              },
              kind: Const(
                  Ty {
                      hir_id: HirId(DefId(dump_hir::Foo::N).1),
                      span: tests/ui/utils/dump_hir.rs:31:14: 31:19 (#N),
                      kind: Path(
                          Resolved(
                              None,
                              Path {
                                  span: tests/ui/utils/dump_hir.rs:31:14: 31:19 (#N),
                                  res: PrimTy(
                                      Uint(
                                          Usize,
                                      ),
                                  ),
                                  segments: [
                                      PathSegment {
                                          ident: usize#0,
                                          hir_id: HirId(DefId(dump_hir::Foo::N).2),
                                          res: PrimTy(
                                              Uint(
                                                  Usize,
                                              ),
                                          ),
                                          args: None,
                                          infer_args: false,
                                      },
                                  ],
                              },
                          ),
                      ),
                  },
                  None,
              ),
              span: tests/ui/utils/dump_hir.rs:31:5: 31:20 (#N),
              defaultness: Default {
                  has_value: false,
              },
          },
      )
  --> tests/ui/utils/dump_hir.rs:31:5
   |
LL |     #[rpl::dump_hir]
   |     ---------------- HIR dumped because of this attribute
...
LL |     const N: usize;
   |     ^^^^^^^^^^^^^^

note: Item(
          Item {
              ident: #0,
              owner_id: DefId(dump_hir::{impl#0}),
              kind: Impl(
                  Impl {
                      constness: NotConst,
                      safety: Safe,
                      polarity: "positive",
                      defaultness: Final,
                      defaultness_span: None,
                      generics: Generics {
                          params: [],
                          predicates: [],
                          has_where_clause_predicates: false,
                          where_clause_span: tests/ui/utils/dump_hir.rs:38:16: 38:16 (#N),
                          span: tests/ui/utils/dump_hir.rs:38:5: 38:5 (#N),
                      },
                      of_trait: Some(
                          TraitRef {
                              path: Path {
                                  span: tests/ui/utils/dump_hir.rs:38:6: 38:9 (#N),
                                  res: Def(
                                      Trait,
                                      DefId(dump_hir::Foo),
                                  ),
                                  segments: [
                                      PathSegment {
                                          ident: Foo#0,
                                          hir_id: HirId(DefId(dump_hir::{impl#0}).1),
                                          res: Def(
                                              Trait,
                                              DefId(dump_hir::Foo),
                                          ),
                                          args: None,
                                          infer_args: false,
                                      },
                                  ],
                              },
                              hir_ref_id: HirId(DefId(dump_hir::{impl#0}).2),
                          },
                      ),
                      self_ty: Ty {
                          hir_id: HirId(DefId(dump_hir::{impl#0}).3),
                          span: tests/ui/utils/dump_hir.rs:38:14: 38:16 (#N),
                          kind: Tup(
                              [],
                          ),
                      },
                      items: [
                          ImplItemRef {
                              id: ImplItemId {
                                  owner_id: DefId(dump_hir::{impl#0}::N),
                              },
                              ident: N#0,
                              kind: Const,
                              span: tests/ui/utils/dump_hir.rs:44:5: 44:30 (#N),
                              trait_item_def_id: Some(
                                  DefId(dump_hir::Foo::N),
                              ),
                          },
                      ],
                  },
              ),
              span: tests/ui/utils/dump_hir.rs:38:1: 45:2 (#N),
              vis_span: tests/ui/utils/dump_hir.rs:38:1: 38:1 (#N),
          },
      )
  --> tests/ui/utils/dump_hir.rs:38:1
   |
LL | #[rpl::dump_hir]
   | ---------------- HIR dumped because of this attribute
...
LL | impl Foo for () {
   | ^^^^^^^^^^^^^^^

note: ImplItem(
          ImplItem {
              ident: N#0,
              owner_id: DefId(dump_hir::{impl#0}::N),
              generics: Generics {
                  params: [],
                  predicates: [],
                  has_where_clause_predicates: false,
                  where_clause_span: tests/ui/utils/dump_hir.rs:44:19: 44:19 (#N),
                  span: tests/ui/utils/dump_hir.rs:44:12: 44:12 (#N),
              },
              kind: Const(
                  Ty {
                      hir_id: HirId(DefId(dump_hir::{impl#0}::N).1),
                      span: tests/ui/utils/dump_hir.rs:44:14: 44:19 (#N),
                      kind: Path(
                          Resolved(
                              None,
                              Path {
                                  span: tests/ui/utils/dump_hir.rs:44:14: 44:19 (#N),
                                  res: PrimTy(
                                      Uint(
                                          Usize,
                                      ),
                                  ),
                                  segments: [
                                      PathSegment {
                                          ident: usize#0,
                                          hir_id: HirId(DefId(dump_hir::{impl#0}::N).2),
                                          res: PrimTy(
                                              Uint(
                                                  Usize,
                                              ),
                                          ),
                                          args: None,
                                          infer_args: false,
                                      },
                                  ],
                              },
                          ),
                      ),
                  },
                  BodyId {
                      hir_id: HirId(DefId(dump_hir::{impl#0}::N).3),
                  },
              ),
              defaultness: Final,
              span: tests/ui/utils/dump_hir.rs:44:5: 44:30 (#N),
              vis_span: tests/ui/utils/dump_hir.rs:44:5: 44:5 (#N),
          },
      )
  --> tests/ui/utils/dump_hir.rs:44:5
   |
LL |     #[rpl::dump_hir]
   |     ---------------- HIR dumped because of this attribute
...
LL |     const N: usize = 0_usize;
   |     ^^^^^^^^^^^^^^

note: Item(
          Item {
              ident: main#0,
              owner_id: DefId(dump_hir::main),
              kind: Fn {
                  sig: FnSig {
                      header: FnHeader {
                          safety: Normal(
                              Safe,
                          ),
                          constness: NotConst,
                          asyncness: NotAsync,
                          abi: Rust,
                      },
                      decl: FnDecl {
                          inputs: [],
                          output: DefaultReturn(
                              tests/ui/utils/dump_hir.rs:51:10: 51:10 (#0),
                          ),
                          c_variadic: false,
                          implicit_self: None,
                          lifetime_elision_allowed: false,
                      },
                      span: tests/ui/utils/dump_hir.rs:51:1: 51:10 (#N),
                  },
                  generics: Generics {
                      params: [],
                      predicates: [],
                      has_where_clause_predicates: false,
                      where_clause_span: tests/ui/utils/dump_hir.rs:51:10: 51:10 (#N),
                      span: tests/ui/utils/dump_hir.rs:51:8: 51:8 (#N),
                  },
                  body: BodyId {
                      hir_id: HirId(DefId(dump_hir::main).75),
                  },
                  has_body: true,
              },
              span: tests/ui/utils/dump_hir.rs:51:1: 104:2 (#N),
              vis_span: tests/ui/utils/dump_hir.rs:51:1: 51:1 (#N),
          },
      )
  --> tests/ui/utils/dump_hir.rs:51:1
   |
LL | #[rpl::dump_hir]
   | ---------------- HIR dumped because of this attribute
...
LL | fn main() {
   | ^^^^^^^^^

note: Stmt(
          Stmt {
              hir_id: HirId(DefId(dump_hir::main).2),
              kind: Let(
                  LetStmt {
                      pat: Pat {
                          hir_id: HirId(DefId(dump_hir::main).10),
                          kind: Binding(
                              BindingMode(
                                  No,
                                  Not,
                              ),
                              HirId(DefId(dump_hir::main).10),
                              x#0,
                              None,
                          ),
                          span: tests/ui/utils/dump_hir.rs:57:9: 57:10 (#N),
                          default_binding_modes: true,
                      },
                      ty: None,
                      init: Some(
                          Expr {
                              hir_id: HirId(DefId(dump_hir::main).3),
                              kind: Call(
                                  Expr {
                                      hir_id: HirId(DefId(dump_hir::main).4),
                                      kind: Path(
                                          TypeRelative(
                                              Ty {
                                                  hir_id: HirId(DefId(dump_hir::main).6),
                                                  span: tests/ui/utils/dump_hir.rs:57:13: 57:16 (#N),
                                                  kind: Path(
                                                      Resolved(
                                                          None,
                                                          Path {
                                                              span: tests/ui/utils/dump_hir.rs:57:13: 57:16 (#N),
                                                              res: Def(
                                                                  Struct,
                                                                  DefId(alloc::sync::Arc),
                                                              ),
                                                              segments: [
                                                                  PathSegment {
                                                                      ident: Arc#0,
                                                                      hir_id: HirId(DefId(dump_hir::main).5),
                                                                      res: Def(
                                                                          Struct,
                                                                          DefId(alloc::sync::Arc),
                                                                      ),
                                                                      args: None,
                                                                      infer_args: true,
                                                                  },
                                                              ],
                                                          },
                                                      ),
                                                  ),
                                              },
                                              PathSegment {
                                                  ident: new#0,
                                                  hir_id: HirId(DefId(dump_hir::main).7),
                                                  res: Err,
                                                  args: None,
                                                  infer_args: true,
                                              },
                                          ),
                                      ),
                                      span: tests/ui/utils/dump_hir.rs:57:13: 57:21 (#N),
                                  },
                                  [
                                      Expr {
                                          hir_id: HirId(DefId(dump_hir::main).8),
                                          kind: Lit(
                                              Spanned {
                                                  node: Int(
                                                      Pu128(
                                                          0,
                                                      ),
                                                      Unsigned(
                                                          Usize,
                                                      ),
                                                  ),
                                                  span: tests/ui/utils/dump_hir.rs:57:22: 57:29 (#N),
                                              },
                                          ),
                                          span: tests/ui/utils/dump_hir.rs:57:22: 57:29 (#N),
                                      },
                                  ],
                              ),
                              span: tests/ui/utils/dump_hir.rs:57:13: 57:30 (#N),
                          },
                      ),
                      els: None,
                      hir_id: HirId(DefId(dump_hir::main).9),
                      span: tests/ui/utils/dump_hir.rs:57:5: 57:31 (#N),
                      source: Normal,
                  },
              ),
              span: tests/ui/utils/dump_hir.rs:57:5: 57:31 (#N),
          },
      )
  --> tests/ui/utils/dump_hir.rs:57:5
   |
LL |     #[rpl::dump_hir]
   |     ---------------- HIR dumped because of this attribute
...
LL |     let x = Arc::new(0_usize);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

note: Item(
          Item {
              ident: foo#0,
              owner_id: DefId(dump_hir::main::foo),
              kind: Fn {
                  sig: FnSig {
                      header: FnHeader {
                          safety: Normal(
                              Safe,
                          ),
                          constness: NotConst,
                          asyncness: NotAsync,
                          abi: Rust,
                      },
                      decl: FnDecl {
                          inputs: [],
                          output: DefaultReturn(
                              tests/ui/utils/dump_hir.rs:63:13: 63:13 (#0),
                          ),
                          c_variadic: false,
                          implicit_self: None,
                          lifetime_elision_allowed: false,
                      },
                      span: tests/ui/utils/dump_hir.rs:63:5: 63:13 (#N),
                  },
                  generics: Generics {
                      params: [],
                      predicates: [],
                      has_where_clause_predicates: false,
                      where_clause_span: tests/ui/utils/dump_hir.rs:63:13: 63:13 (#N),
                      span: tests/ui/utils/dump_hir.rs:63:11: 63:11 (#N),
                  },
                  body: BodyId {
                      hir_id: HirId(DefId(dump_hir::main::foo).4),
                  },
                  has_body: true,
              },
              span: tests/ui/utils/dump_hir.rs:63:5: 70:6 (#N),
              vis_span: tests/ui/utils/dump_hir.rs:63:5: 63:5 (#N),
          },
      )
  --> tests/ui/utils/dump_hir.rs:63:5
   |
LL |     #[rpl::dump_hir]
   |     ---------------- HIR dumped because of this attribute
...
LL |     fn foo() {
   |     ^^^^^^^^

note: Expr(
          Expr {
              hir_id: HirId(DefId(dump_hir::main::foo).2),
              kind: Block(
                  Block {
                      stmts: [],
                      expr: None,
                      hir_id: HirId(DefId(dump_hir::main::foo).3),
                      rules: DefaultBlock,
                      span: tests/ui/utils/dump_hir.rs:69:9: 69:11 (#N),
                      targeted_by_break: false,
                  },
                  None,
              ),
              span: tests/ui/utils/dump_hir.rs:69:9: 69:11 (#N),
          },
      )
  --> tests/ui/utils/dump_hir.rs:69:9
   |
LL |         #[rpl::dump_hir]
   |         ---------------- HIR dumped because of this attribute
...
LL |         {}
   |         ^^

note: Expr(
          Expr {
              hir_id: HirId(DefId(dump_hir::main).12),
              kind: If(
                  Expr {
                      hir_id: HirId(DefId(dump_hir::main).14),
                      kind: DropTemps(
                          Expr {
                              hir_id: HirId(DefId(dump_hir::main).13),
                              kind: Lit(
                                  Spanned {
                                      node: Bool(
                                          true,
                                      ),
                                      span: tests/ui/utils/dump_hir.rs:76:8: 76:12 (#N),
                                  },
                              ),
                              span: tests/ui/utils/dump_hir.rs:76:8: 76:12 (#N),
                          },
                      ),
                      span: tests/ui/utils/dump_hir.rs:76:8: 76:12 (#N),
                  },
                  Expr {
                      hir_id: HirId(DefId(dump_hir::main).16),
                      kind: Block(
                          Block {
                              stmts: [],
                              expr: None,
                              hir_id: HirId(DefId(dump_hir::main).15),
                              rules: DefaultBlock,
                              span: tests/ui/utils/dump_hir.rs:76:13: 78:6 (#N),
                              targeted_by_break: false,
                          },
                          None,
                      ),
                      span: tests/ui/utils/dump_hir.rs:76:13: 78:6 (#N),
                  },
                  Some(
                      Expr {
                          hir_id: HirId(DefId(dump_hir::main).17),
                          kind: Block(
                              Block {
                                  stmts: [],
                                  expr: None,
                                  hir_id: HirId(DefId(dump_hir::main).18),
                                  rules: DefaultBlock,
                                  span: tests/ui/utils/dump_hir.rs:78:12: 79:6 (#N),
                                  targeted_by_break: false,
                              },
                              None,
                          ),
                          span: tests/ui/utils/dump_hir.rs:78:12: 79:6 (#N),
                      },
                  ),
              ),
              span: tests/ui/utils/dump_hir.rs:76:5: 79:6 (#N),
          },
      )
  --> tests/ui/utils/dump_hir.rs:76:5
   |
LL |       #[rpl::dump_hir]
   |       ---------------- HIR dumped because of this attribute
...
LL | /     if true {
LL | |
LL | |     } else {
LL | |     }
   | |_____^

note: Expr(
          Expr {
              hir_id: HirId(DefId(dump_hir::main).20),
              kind: Call(
                  Expr {
                      hir_id: HirId(DefId(dump_hir::main).21),
                      kind: Path(
                          Resolved(
                              None,
                              Path {
                                  span: tests/ui/utils/dump_hir.rs:85:5: 85:23 (#N),
                                  res: Def(
                                      Fn,
                                      DefId(std::thread::spawn),
                                  ),
                                  segments: [
                                      PathSegment {
                                          ident: std#0,
                                          hir_id: HirId(DefId(dump_hir::main).22),
                                          res: Def(
                                              Mod,
                                              DefId(std),
                                          ),
                                          args: None,
                                          infer_args: true,
                                      },
                                      PathSegment {
                                          ident: thread#0,
                                          hir_id: HirId(DefId(dump_hir::main).23),
                                          res: Def(
                                              Mod,
                                              DefId(std::thread),
                                          ),
                                          args: None,
                                          infer_args: true,
                                      },
                                      PathSegment {
                                          ident: spawn#0,
                                          hir_id: HirId(DefId(dump_hir::main).24),
                                          res: Def(
                                              Fn,
                                              DefId(std::thread::spawn),
                                          ),
                                          args: None,
                                          infer_args: true,
                                      },
                                  ],
                              },
                          ),
                      ),
                      span: tests/ui/utils/dump_hir.rs:85:5: 85:23 (#N),
                  },
                  [
                      Expr {
                          hir_id: HirId(DefId(dump_hir::main).25),
                          kind: Closure(
                              Closure {
                                  def_id: DefId(dump_hir::main::{closure#0}),
                                  binder: Default,
                                  constness: NotConst,
                                  capture_clause: Value {
                                      move_kw: tests/ui/utils/dump_hir.rs:85:24: 85:28 (#0),
                                  },
                                  bound_generic_params: [],
                                  fn_decl: FnDecl {
                                      inputs: [],
                                      output: DefaultReturn(
                                          tests/ui/utils/dump_hir.rs:85:31: 85:31 (#0),
                                      ),
                                      c_variadic: false,
                                      implicit_self: None,
                                      lifetime_elision_allowed: false,
                                  },
                                  body: BodyId {
                                      hir_id: HirId(DefId(dump_hir::main).26),
                                  },
                                  fn_decl_span: tests/ui/utils/dump_hir.rs:85:24: 85:31 (#N),
                                  fn_arg_span: Some(
                                      tests/ui/utils/dump_hir.rs:85:29: 85:31 (#0),
                                  ),
                                  kind: Closure,
                              },
                          ),
                          span: tests/ui/utils/dump_hir.rs:85:24: 88:6 (#N),
                      },
                  ],
              ),
              span: tests/ui/utils/dump_hir.rs:85:5: 88:7 (#N),
          },
      )
  --> tests/ui/utils/dump_hir.rs:85:5
   |
LL |       #[rpl::dump_hir]
   |       ---------------- HIR dumped because of this attribute
...
LL | /     std::thread::spawn(move || {
LL | |
LL | |         println!("{x}");
LL | |     });
   | |______^

note: Item(
          Item {
              ident: mac#0,
              owner_id: DefId(dump_hir::main::mac),
              kind: Macro(
                  MacroDef {
                      body: DelimArgs {
                          dspan: DelimSpan {
                              open: tests/ui/utils/dump_hir.rs:94:22: 94:23 (#0),
                              close: tests/ui/utils/dump_hir.rs:100:5: 100:6 (#0),
                          },
                          delim: Brace,
                          tokens: TokenStream(
                              [
                                  Delimited(
                                      DelimSpan {
                                          open: tests/ui/utils/dump_hir.rs:96:9: 96:10 (#0),
                                          close: tests/ui/utils/dump_hir.rs:96:10: 96:11 (#0),
                                      },
                                      DelimSpacing {
                                          open: JointHidden,
                                          close: Alone,
                                      },
                                      Parenthesis,
                                      TokenStream(
                                          [],
                                      ),
                                  ),
                                  Token(
                                      Token {
                                          kind: FatArrow,
                                          span: tests/ui/utils/dump_hir.rs:96:12: 96:14 (#N),
                                      },
                                      Alone,
                                  ),
                                  Delimited(
                                      DelimSpan {
                                          open: tests/ui/utils/dump_hir.rs:96:15: 96:16 (#0),
                                          close: tests/ui/utils/dump_hir.rs:99:9: 99:10 (#0),
                                      },
                                      DelimSpacing {
                                          open: Alone,
                                          close: Joint,
                                      },
                                      Brace,
                                      TokenStream(
                                          [
                                              Token(
                                                  Token {
                                                      kind: Pound,
                                                      span: tests/ui/utils/dump_hir.rs:97:13: 97:14 (#N),
                                                  },
                                                  JointHidden,
                                              ),
                                              Delimited(
                                                  DelimSpan {
                                                      open: tests/ui/utils/dump_hir.rs:97:14: 97:15 (#0),
                                                      close: tests/ui/utils/dump_hir.rs:97:28: 97:29 (#0),
                                                  },
                                                  DelimSpacing {
                                                      open: JointHidden,
                                                      close: Alone,
                                                  },
                                                  Bracket,
                                                  TokenStream(
                                                      [
                                                          Token(
                                                              Token {
                                                                  kind: Ident(
                                                                      "rpl",
                                                                      No,
                                                                  ),
                                                                  span: tests/ui/utils/dump_hir.rs:97:15: 97:18 (#N),
                                                              },
                                                              Joint,
                                                          ),
                                                          Token(
                                                              Token {
                                                                  kind: PathSep,
                                                                  span: tests/ui/utils/dump_hir.rs:97:18: 97:20 (#N),
                                                              },
                                                              JointHidden,
                                                          ),
                                                          Token(
                                                              Token {
                                                                  kind: Ident(
                                                                      "dump_hir",
                                                                      No,
                                                                  ),
                                                                  span: tests/ui/utils/dump_hir.rs:97:20: 97:28 (#N),
                                                              },
                                                              JointHidden,
                                                          ),
                                                      ],
                                                  ),
                                              ),
                                              Token(
                                                  Token {
                                                      kind: Ident(
                                                          "println",
                                                          No,
                                                      ),
                                                      span: tests/ui/utils/dump_hir.rs:98:13: 98:20 (#N),
                                                  },
                                                  Joint,
                                              ),
                                              Token(
                                                  Token {
                                                      kind: Not,
                                                      span: tests/ui/utils/dump_hir.rs:98:20: 98:21 (#N),
                                                  },
                                                  JointHidden,
                                              ),
                                              Delimited(
                                                  DelimSpan {
                                                      open: tests/ui/utils/dump_hir.rs:98:21: 98:22 (#0),
                                                      close: tests/ui/utils/dump_hir.rs:98:28: 98:29 (#0),
                                                  },
                                                  DelimSpacing {
                                                      open: JointHidden,
                                                      close: Joint,
                                                  },
                                                  Parenthesis,
                                                  TokenStream(
                                                      [
                                                          Token(
                                                              Token {
                                                                  kind: Literal(
                                                                      Lit {
                                                                          kind: Str,
                                                                          symbol: "test",
                                                                          suffix: None,
                                                                      },
                                                                  ),
                                                                  span: tests/ui/utils/dump_hir.rs:98:22: 98:28 (#N),
                                                              },
                                                              JointHidden,
                                                          ),
                                                      ],
                                                  ),
                                              ),
                                              Token(
                                                  Token {
                                                      kind: Semi,
                                                      span: tests/ui/utils/dump_hir.rs:98:29: 98:30 (#N),
                                                  },
                                                  Alone,
                                              ),
                                          ],
                                      ),
                                  ),
                                  Token(
                                      Token {
                                          kind: Semi,
                                          span: tests/ui/utils/dump_hir.rs:99:10: 99:11 (#N),
                                      },
                                      Alone,
                                  ),
                              ],
                          ),
                      },
                      macro_rules: true,
                  },
                  Bang,
              ),
              span: tests/ui/utils/dump_hir.rs:94:5: 100:6 (#N),
              vis_span: tests/ui/utils/dump_hir.rs:94:5: 94:5 (#N),
          },
      )
  --> tests/ui/utils/dump_hir.rs:94:5
   |
LL |     #[rpl::dump_hir]
   |     ---------------- HIR dumped because of this attribute
...
LL |     macro_rules! mac {
   |     ^^^^^^^^^^^^^^^^

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:6:1
   |
LL | #[rpl::dump_hir]
   | ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:12:1
   |
LL | #[rpl::dump_hir]
   | ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:21:1
   |
LL | #[rpl::dump_hir]
   | ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:27:5
   |
LL |     #[rpl::dump_hir]
   |     ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:34:1
   |
LL | #[rpl::dump_hir]
   | ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:40:5
   |
LL |     #[rpl::dump_hir]
   |     ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:47:1
   |
LL | #[rpl::dump_hir]
   | ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:53:5
   |
LL |     #[rpl::dump_hir]
   |     ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:59:5
   |
LL |     #[rpl::dump_hir]
   |     ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:65:9
   |
LL |         #[rpl::dump_hir]
   |         ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:72:5
   |
LL |     #[rpl::dump_hir]
   |     ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:81:5
   |
LL |     #[rpl::dump_hir]
   |     ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: abort due to debugging
  --> tests/ui/utils/dump_hir.rs:90:5
   |
LL |     #[rpl::dump_hir]
   |     ^^^^^^^^^^^^^^^^ help: remove this attribute
   |
   = note: `#[rpl::dump_hir]`, `#[rpl::print_hir]` and `#[rpl::dump_mir]` are only used for debugging
   = note: this error is to remind you removing these attributes

error: aborting due to 13 previous errors

